cabal-version:       2.2
name:                concur-react
version:             0.1.0.0
synopsis:            A client side web UI framework for Haskell. React bindings.
description:         A client side web UI framework for Haskell. React bindings.
homepage:            https://github.com/ajnsit/concur#readme
bug-reports:         https://github.com/ajnsit/concur/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ajnsit/concur

common basics
  ghc-options: -Wall -ferror-spans
  js-sources: jsbits/index.compiled.js
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , mtl >=2.2
    , transformers >=0.5
    , free >=4.12
    , concur-core
  if impl(ghcjs -any)
    build-depends: ghcjs-base
  else
    build-depends: ghcjs-base-stub >=0.1

library
  import: basics
  hs-source-dirs: src
  exposed-modules:
      Concur.React
      Concur.React.DOM
      Concur.React.Widgets
      Concur.React.Run
      Concur.Internal.ReactFFI
  other-modules:
      Paths_concur_react
  if impl(ghcjs -any)
    hs-source-dirs: src-ghcjs
  else
    hs-source-dirs: src-ghc

executable concur-react-calculator
  import: basics
  hs-source-dirs: examples
  main-is: Calc.hs
  build-depends: concur-react

executable concur-react-hilo
  import: basics
  hs-source-dirs: examples
  main-is: HiLo.hs
  build-depends: concur-react, random

executable concur-react-menu
  import: basics
  hs-source-dirs: examples
  main-is: Menu.hs
  build-depends: concur-react

executable concur-react-multi-entry
  import: basics
  hs-source-dirs: examples
  main-is: MultiEntry.hs
  build-depends: concur-react
